--- a/src/css/style.css
+++ b/src/css/style.css
@@ -602,11 +602,9 @@ p {
 
 header {
   width: 100%;
-  top: 0;
-  position: -webkit-sticky;
-  position: sticky;
-  z-index: 2;
   padding-top: 1rem;
+  z-index: 2;
+  position: relative;
 }
 
 header .navbar {
